<resources>
  <string name="please_wait">Please Wait</string>
  <string name="progress_login">Progressing</string>

  <string name="page_title_flight_details">Flight Details</string>
  <string name="page_title_flights">Flights</string>
  <string name="page_title_baggage_tracking">Baggage Tracking</string>

  <string name="login_welcome_logo_text">Welcome To Airport DCS</string>
  <string name="login_airline_hint">Please select your airline</string>
  <string name="login_username">Username</string>
  <string name="login_username_hint">Please enter your username</string>
  <string name="login_password">Password</string>
  <string name="login_password_hint">Please enter your password</string>
  <string name="login_button">Login</string>

  <string name="home_hello">Hello,</string>
  <string name="home_flights">Flights</string>
  <string name="home_baggage_tracking">Baggage Tracking</string>

  <string name="home_side_menu_settings">Settings</string>
  <string name="home_side_menu_log_out">Log Out</string>

  <string name="baggage_track_main_bag_area_location">Bag Area Location</string>
  <string name="baggage_track_main_bag_area_location_hint">Please select the bag area location</string>
  <string name="baggage_track_main_location_code">Location Code</string>
  <string name="baggage_track_main_location_code_hint">Please select the location code</string>
  <string name="baggage_track_main_bagtag_no">Bagtag No</string>
  <string name="baggage_track_main_bagtag_no_hint">Please enter or scan the bagtag no</string>
  <string name="baggage_track_main_last_3_bagtag_no">Last 3 Bagtag Numbers</string>
  <string name="baggage_track_main_success">Success</string>
  <string name="baggage_track_main_send">Send</string>

  <string name="baggage_track_scan_location_name">Location Name</string>
  <string name="baggage_track_scan_location_code">Location Code</string>
  <string name="baggage_track_scan_flashlight">Flashlight</string>
  <string name="baggage_track_scan_complete">Complete</string>

  <string name="home_flights_found">flights found for this day</string>
  <string name="home_today_label">TODAY</string>
  <string name="item_flight_boarding_time">Boarding Time</string>
  <string name="item_flight_flight_status">Flight Status</string>

  <string name="flights_flight_no">Flight No:</string>
  <string name="flights_gate">Gate:</string>

  <string name="detail_boarding">Boarding</string>
  <string name="detail_board_pax">Board Pax</string>
  <string name="detail_flight_type">Flight Type: </string>
  <string name="detail_aircraft">Aircraft: </string>
  <string name="detail_flight_status">Flight Status: </string>
  <string name="detail_reg">Reg: </string>
  <string name="detail_gate">Gate: </string>
  <string name="detail_check_in">Check-In: </string>
  <string name="detail_unboarded">Unboarded: </string>
  <string name="detail_boarded">Boarded: </string>
  <string name="detail_boarding_gate">Boarding Gate: </string>
  <string name="detail_delay_time">Delay Time: </string>

  <string name="dialog_title_select_a_device">Please Select A Device</string>

  <string-array name="barcode_devices_array_zebra">
    <item>Zebra Scanner</item>
    <item>Device Camera</item>
  </string-array>

  <string-array name="barcode_devices_array_kranger">
    <item>K-Ranger Scanner</item>
    <item>Device Camera</item>
  </string-array>

  <string-array name="barcode_devices_array_pranger">
    <item>P-Ranger Scanner</item>
    <item>Device Camera</item>
  </string-array>

  <string name="general_popup_ok">OK</string>
  <string name="general_popup_cancel">CANCEL</string>
  <string name="general_token_error_popup_title">Warning</string>
  <string name="general_token_error_popup_message">Token expired, please login again.</string>

  <string name="list_hint_search_flight_no">Search Flight No</string>
    <string name="welcome_to">Welcome to</string>
  <string name="airport_dcs">Airport DCS</string>
</resources>
