<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:fitsSystemWindows="true"
    android:background="@color/main"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:fillViewport="true"
      >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

      <RelativeLayout
          android:id="@+id/rlt_logo"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_alignParentTop="true"
          >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rlt_logo_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:layout_constraintTop_toTopOf="parent">

          <TextView
              android:id="@+id/tv_welcome_to"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="@dimen/spacing_xlarge"
              android:layout_marginTop="50dp"
              android:fontFamily="@font/poppins_regular"
              android:text="@string/welcome_to"
              android:textColor="@color/text_login_title"
              android:textSize="@dimen/text_size_xxxxxlarge"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <TextView
              android:id="@+id/tv_airport_dcs"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="@font/poppins_bold"
              android:text="@string/airport_dcs"
              android:textColor="@color/text_login_title"
              android:textSize="@dimen/text_size_xxxxxlarge"
              android:textStyle="bold"
              app:layout_constraintStart_toStartOf="@id/tv_welcome_to"
              app:layout_constraintTop_toBottomOf="@id/tv_welcome_to" />

          <View
              android:layout_width="3dp"
              android:layout_height="0dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="5dp"
              android:layout_marginBottom="20dp"
              android:background="#E31F26"
              app:layout_constraintBottom_toBottomOf="@id/tv_airport_dcs"
              app:layout_constraintEnd_toStartOf="@id/tv_welcome_to"
              app:layout_constraintTop_toTopOf="@id/tv_welcome_to" />


          <TextView
              android:id="@+id/tv_sign_in"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="32dp"
              android:fontFamily="@font/poppins_bold"
              android:text="Sign In"
              android:textColor="@color/text_color_secondary"
              android:textSize="20sp"
              app:layout_constraintStart_toStartOf="@id/tv_airport_dcs"
              app:layout_constraintTop_toBottomOf="@id/tv_airport_dcs" />

        </androidx.constraintlayout.widget.ConstraintLayout>
      </RelativeLayout>

      <RelativeLayout
          android:id="@+id/rlt_login"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/rlt_logo"
          android:layout_marginTop="@dimen/spacing_sxlarge"
          android:background="@drawable/ic_login_background"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:paddingStart="@dimen/spacing_mxlarge"
          android:paddingEnd="@dimen/spacing_mxlarge">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_company"
            style="@style/AppTextInputLayoutStyle"
            android:layout_marginTop="@dimen/spacing_sxlarge"
            android:hint="Airline"
            android:visibility="gone"
            app:placeholderText="@string/login_airline_hint">

          <com.hititcs.dcs.widget.AutoCompleteDropDown
              android:id="@+id/auto_drop"
              style="@style/AppTextInputEditTextLoginCompany"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/spacing_large"
              app:dropDownIconColor="@color/colorSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_username"
            style="@style/AppTextInputLayoutStyle"
            android:layout_below="@+id/txt_input_company"
            android:layout_marginTop="@dimen/spacing_sxlarge"
            android:hint="@string/login_username"
            app:hintEnabled="true"
            app:hintTextColor="@color/text_color_primary"
            app:placeholderText="@string/login_username_hint"
            app:placeholderTextColor="@color/text_color_hint_primary">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edt_username"
              style="@style/AppTextInputEditTextGeneral"
              android:inputType="text"
              android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txt_input_password"
            style="@style/AppTextInputLayoutStyle"
            android:layout_below="@+id/txt_input_username"
            android:layout_marginTop="@dimen/spacing_sxlarge"
            android:hint="@string/login_password"
            app:hintEnabled="true"
            app:hintTextColor="@color/text_color_primary"
            app:passwordToggleDrawable="@drawable/ic_pass_hide"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary"
            app:placeholderText="@string/login_password_hint"
            app:placeholderTextColor="@color/text_color_hint_primary">

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/edt_password"
              style="@style/AppTextInputEditTextGeneral"
              android:inputType="textPassword"
              android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
      </RelativeLayout>

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_below="@+id/rlt_login"
          android:layout_alignParentBottom="true"
          android:background="@color/white">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            style="@style/TextAppearance.App.Medium.Bold"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_primary"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_button_tertiary"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_mlarge" />
      </RelativeLayout>
    </RelativeLayout>
  </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>