<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    >

  <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_mxlarge"
        android:orientation="vertical"
        android:paddingStart="@dimen/spacing_lmedium"
        android:paddingTop="@dimen/spacing_xsmall"
        android:paddingEnd="@dimen/spacing_lmedium"
        >

      <LinearLayout
          android:id="@+id/ln_boarding"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/spacing_sxlarge"
          android:orientation="vertical"
          android:clipChildren="false"
          android:clipToPadding="false"
          >

        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:background="@drawable/bg_flight_details"
          android:elevation="@dimen/spacing_medium"
          >

        <include layout="@layout/item_flight" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_mslarge"
            android:background="@drawable/ic_dashed_circles"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/spacing_lmedium"
            android:paddingTop="@dimen/spacing_lmedium"
            android:paddingEnd="@dimen/spacing_lmedium"
            android:paddingBottom="@dimen/spacing_lmedium"
            >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:layout_marginTop="@dimen/spacing_mxlarge"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_flight_type"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_flight_type"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="1T"
                />

          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_aircraft"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_aircraft"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="DEP"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_flight_status"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_flight_status_data"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="XXX"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_reg"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_reg"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="DEP"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:visibility="gone"
              tools:visibility="visible"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_gate"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_gate_detail"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="DEP"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_check_in"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_check_in"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="00"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_unboarded"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_unboarded"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="00"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_boarded"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_boarded"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="00"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_boarding_gate"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_boarding_gate"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="00"
                />
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              >

            <TextView
                style="@style/TextAppearance.App.Medium.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/spacing_smedium"
                android:text="@string/detail_delay_time"
                android:textColor="@color/text_color_primary"
                />

            <TextView
                android:id="@+id/tv_delay_time"
                style="@style/TextAppearance.App.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_primary"
                tools:text="00"
                />
          </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/scan_barcode"
            style="@style/AppTheme.BottomRoundedCornerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxxlarge"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="horizontal"
            >

          <ImageView
              android:layout_width="@dimen/spacing_xxlarge"
              android:layout_height="@dimen/spacing_22"
              android:src="@drawable/ic_barcode"
              />

          <TextView
              style="@style/TextAppearance.App.Large.Bold"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/detail_board_pax"
              android:textColor="@color/white"
              android:textSize="@dimen/text_size_lmedium"
              />
        </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/spacing_mxlarge"
          android:layout_marginEnd="@dimen/spacing_mxlarge"
          android:orientation="vertical"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_lmedium"
            android:paddingEnd="@dimen/spacing_lmedium"
            >

          <LinearLayout
              android:id="@+id/btn_scan_baggage"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginEnd="@dimen/spacing_lmedium"
              android:gravity="center"
              android:orientation="vertical"
              >

            <ImageView
                android:layout_width="@dimen/spacing_45"
                android:layout_height="@dimen/spacing_xxlarge"
                android:layout_marginTop="@dimen/spacing_xslarge"
                app:srcCompat="@drawable/boarding_ticket"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_boarding"
                android:textColor="@color/white"
                />
          </LinearLayout>
        </LinearLayout>
      </LinearLayout>

      </LinearLayout>

    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</LinearLayout>