<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_baggage_track_send"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/bg_content"
        android:fillViewport="true"
        android:orientation="vertical"
        >

      <LinearLayout
          android:id="@+id/ln_baggage_track_main"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_alignParentTop="true"
          android:layout_marginStart="@dimen/spacing_large"
          android:layout_marginEnd="@dimen/spacing_large"
          android:orientation="vertical"
          >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dropdown_bag_area_location"
            android:layout_width="match_parent"
            android:hint="@string/baggage_track_main_bag_area_location_hint"
            android:layout_alignParentStart="true"
            app:hintTextColor="@color/colorPrimary"
            app:placeholderText="@string/baggage_track_main_bag_area_location"
            style="@style/AppTextInputLayoutStyle"
            >

          <com.hititcs.dcs.widget.AutoCompleteDropDown
              android:id="@+id/dropdown_bag_area_location"
              android:layout_width="match_parent"
              android:layout_marginTop="@dimen/spacing_sxlarge"
              android:padding="@dimen/spacing_large"
              android:cursorVisible="false"
              android:inputType="textNoSuggestions"
              app:dropDownIconColor="@color/white"
              app:showDropDownIcon="true"
              style="@style/AppTextInputStyle"
              />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_dropdown_bag_area_location_code"
            android:layout_width="match_parent"
            android:hint="@string/baggage_track_main_bag_area_location_hint"
            android:layout_alignParentStart="true"
            app:hintTextColor="@color/colorPrimary"
            app:placeholderText="@string/baggage_track_main_bag_area_location"
            style="@style/AppTextInputLayoutStyle"
            >

          <com.hititcs.dcs.widget.AutoCompleteDropDown
              android:id="@+id/dropdown_bag_area_location_code"
              android:layout_width="match_parent"
              android:layout_marginTop="@dimen/spacing_sxlarge"
              android:padding="@dimen/spacing_large"
              android:cursorVisible="false"
              android:inputType="textNoSuggestions"
              app:dropDownIconColor="@color/white"
              app:showDropDownIcon="true"
              style="@style/AppTextInputStyle"
              />

        </com.google.android.material.textfield.TextInputLayout>

      </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_baggage_track_send"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxxlarge"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/bg_button_tertiary"
        android:orientation="horizontal"
        android:textAllCaps="false"
        android:text="@string/baggage_track_main_send"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mlarge"
        style="@style/AppTheme.BottomRoundedCornerButton"
        />

  </RelativeLayout>
</LinearLayout>